aligned boxes correctlygit add css/main.css git add css/main.css git add css/main.css

--- a/pub/css/main.css
+++ b/pub/css/main.css
@@ -99,6 +99,7 @@ article{
     padding: 20px;
     max-width: 780px;
     float: right;
+    margin-top: -60px;
 
 }
 
@@ -120,10 +121,12 @@ article{
 
 h1{
     text-align: right;
+    margin: 0;
 }
 
 h6{
     text-align: right;
+    margin: 0;
 }
 
 .article-heading{
